; ModuleID = '/home/carl/AnghaBench/radare2/shlr/mpc/extr_mpc.c_mpc_tok_between.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/mpc/extr_mpc.c_mpc_tok_between.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@mpcf_snd_free = common dso_local global i32 0, align 4
@free = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @mpc_tok_between(i32* %0, i32 %1, i8* %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load i32, i32* @mpcf_snd_free, align 4
  %10 = load i8*, i8** %7, align 8
  %11 = call i32 @mpc_sym(i8* %10)
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @mpc_tok(i32* %12)
  %14 = load i8*, i8** %8, align 8
  %15 = call i32 @mpc_sym(i8* %14)
  %16 = load i32, i32* @free, align 4
  %17 = load i32, i32* %6, align 4
  %18 = call i32* @mpc_and(i32 3, i32 %9, i32 %11, i32 %13, i32 %15, i32 %16, i32 %17)
  ret i32* %18
}

declare dso_local i32* @mpc_and(i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @mpc_sym(i8*) #1

declare dso_local i32 @mpc_tok(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
